<resources>
    <string name="app_name">Authcoin</string>
    <string name="identity">Identity</string>
    <string name="challenges">Challenges</string>
    <string name="trusted_parties">Trust</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_wallet_yet">You don\'t have a wallet, yet.</string>
    <string name="no_wallet_yet_desc">Create your wallet by providing a password for it.</string>
    <string name="create_wallet_button">Create wallet</string>
    <string name="password_confirm">Confirm password</string>
    <string name="password">Password</string>
    <string name="wallet_address">Wallet address:</string>
    <string name="wallet_address_copied">Wallet address copied</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="unspent_output">Unspent output:</string>
    <string name="new_identity">Create a new identity</string>
    <string name="new_identity_desc">Some description for creating a new identity</string>
    <string name="alias">Alias</string>
    <string name="identifier">Identifier</string>
    <string name="first_identifier">Identifier 1</string>
    <string name="add_identifier">Add identifier</string>
    <string name="submit_identity">Submit identity</string>
    <string name="eir_content">Content</string>
    <string name="eir_content_type">Content type</string>
    <string name="eir_hash">Hash</string>
    <string name="eir_signature">Signature</string>
    <string name="eir_identifiers">Identifiers</string>
    <string name="no_identity_yet">This identity is not on the block-chain, yet.</string>
    <string name="pin_create">Create new PIN</string>
    <string name="pin_insert">Insert PIN</string>
    <string name="new_challenge">Send a new challenge</string>
    <string name="new_challenge_desc">Some description for sending a new challenge</string>
    <string name="your_identity">Your identity</string>
    <string name="challenge_type">Challenge type</string>
    <string name="challenge_target">Challenge target identity</string>
    <string name="send_challenge">Send challenge</string>
    <string name="wants_to_verify_your_identity">wants to verify your identity.</string>
    <string name="cancel">Cancel</string>
    <string name="select_challenge">Select challenge</string>
    <string name="select_identity">Select identity</string>
    <string name="invalid_response">Invalid response</string>
    <string name="sign_response">Sign response</string>
    <string name="fulfill">Fulfill</string>
    <string name="has_responded_with">has responded with:</string>
    <string name="invalid">INVALID</string>
    <string name="valid">VALID</string>
</resources>
