<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_identity"
            android:enabled="true"
            android:title="@string/identity"
            android:icon="@drawable/user_icon"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_challenges"
            android:enabled="true"
            android:title="@string/challenges"
            android:icon="@drawable/challenge_icon"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_trust"
            android:enabled="true"
            android:title="@string/trusted_parties"
            android:icon="@drawable/trusted_parties_icon"
            app:showAsAction="ifRoom"/>
</menu>